--- a/index.html
+++ b/index.html
@@ -162,6 +162,11 @@ Or for tools:
                     <h3>Omen</h3>
                     <p>Create omens with unique properties and affix effects</p>
                 </div>
+                <div class="item-type-card" onclick="goToGatewayCreator()">
+                    <img src="gate_peal.png" alt="Gateway" class="icon">
+                    <h3>Gateway Creator</h3>
+                    <p>Create custom gateways with waves and mob configurations</p>
+                </div>
             </div>
         </div>
 
@@ -507,7 +512,6 @@ Or for tools:
     });
 </script>
 </body>
-<script src="data.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
