--- a/gateway-creator.html
+++ b/gateway-creator.html
@@ -158,7 +158,7 @@
     <!-- Output Section -->
     <div class="section">
         <h3>📤 Generated Gateway</h3>
-        <button class="generate-btn" onclick="generateGatewayJson()">🔮 Generate Gateway JSON</button>
+        <button class="generate-btn" onclick="generateGateway()">🔮 Generate Gateway JSON</button>
         <div id="output" class="output">Generated gateway will appear here...</div>
         <button class="copy-btn" onclick="copyOutput()">📋 Copy to Clipboard</button>
     </div>
